# japan-fiscal-simulator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md  pyscn-bot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.pyscn/reports/: analyze_20260127_025711.html  analyze_20260127_025751.html  analyze_20260128_222851.html  analyze_20260128_223022.html  analyze_20260128_223024.html  analyze_20260128_223035.json  analyze_20260128_223047.json
analysis/: food_tax_1pct_2yr.py
data/calibration/: japan_baseline.json
docs/: MATHEMATICAL_SPECIFICATION.md  ROADMAP_CENTRAL_BANK_LEVEL.md  cli.md  mcp.md  python-api.md
docs/guide/: estimation.md  getting-started.md  mcp.md
src/japan_fiscal_simulator/: __init__.py
src/japan_fiscal_simulator/cli/: commands.py  main.py
src/japan_fiscal_simulator/core/: __init__.py  derived_coefficients.py  equation_system.py  exceptions.py  linear_solver.py  model.py  nk_model.py  simulation.py  solver.py  steady_state.py
src/japan_fiscal_simulator/core/equations/: __init__.py  base.py  capital.py  investment.py  is_curve.py  labor_demand.py  marginal_cost.py  mrs.py  phillips_curve.py  resource_constraint.py  wage_phillips.py
src/japan_fiscal_simulator/estimation/: __init__.py  data_fetcher.py  data_loader.py  diagnostics.py  kalman_filter.py  mcmc.py  parameter_mapping.py  priors.py  results.py  state_space.py
src/japan_fiscal_simulator/mcp/: resources.py  server.py  tools.py
src/japan_fiscal_simulator/output/: __init__.py  graphs.py  reports.py  schemas.py
src/japan_fiscal_simulator/parameters/: __init__.py  calibration.py  constants.py  defaults.py
src/japan_fiscal_simulator/policies/: __init__.py  consumption_tax.py  dual_rate_tax.py  social_security.py  subsidies.py
src/japan_fiscal_simulator/sectors/: __init__.py  central_bank.py  financial.py  firms.py  government.py  households.py
tests/: test_capital_investment.py  test_cli.py  test_data_loader.py  test_diagnostics.py  test_docs.py  test_edge_cases.py  test_equation_system.py  test_equations.py  test_estimation_integration.py  test_food_tax_analysis.py  test_golden_master.py  test_habit_formation.py  test_irf_economics.py  test_kalman_filter.py  test_labor_market.py  test_mcmc.py  test_mcp_tools.py  test_model.py  test_nk_solver_phase2.py  test_nk_system_matrices.py  test_parameter_mapping.py  test_parameter_validation.py  test_price_setting_phase3.py  test_priors.py  test_simulation.py  test_solver.py  test_state_space.py  test_steady_state.py  test_version_metadata.py
