[project]
name = "jpfs"
version = "0.5.0"
description = "Japan Fiscal Simulator - New Keynesian DSGEモデルによる財政政策分析"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Japan Fiscal Team"}
]
keywords = ["dsge", "fiscal-policy", "economics", "japan", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/DaisukeYoda/japan-fiscal-simulator"
Repository = "https://github.com/DaisukeYoda/japan-fiscal-simulator"
Documentation = "https://github.com/DaisukeYoda/japan-fiscal-simulator/tree/main/docs"
Issues = "https://github.com/DaisukeYoda/japan-fiscal-simulator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
jpfs = "japan_fiscal_simulator.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/japan_fiscal_simulator"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "PLC0415",  # import-outside-top-level（関数内import禁止）
    "PLW0603",  # global-statement（DIアンチパターン検知）
]
ignore = [
    "E501",   # line-length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/japan_fiscal_simulator/__init__.py" = ["E402"]
"tests/**" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["japan_fiscal_simulator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "scipy-stubs>=1.17.0",
]
